k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: docker.io/httpd:latest
          imagePullPolicy: Always
          name: c1
          ports:
            - containerPort: 80
              protocol: TCP
