k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  type: NodePort
  ports:
    - name: 80-tcp
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: web
